--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,3 @@
 spring:
-    datasource:
-        driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://localhost:3306/progress_note?useUnicode=true&characterEncoding=utf-8&useSSL=true&serverTimezone=UTC
-        username: root
-        password: 12345678
+    profiles:
+        active: ycdx
